--- a/style_grid.css
+++ b/style_grid.css
@@ -106,6 +106,8 @@ nav ul li {
   padding: 10px;
   background-color: lightgrey;
 
+
+
 }
 
 nav h4 {
@@ -113,7 +115,7 @@ nav h4 {
 }
 
 
-nav ul li a {
+nav ul a {
   color: inherit;
   text-decoration: none;
 }
@@ -206,9 +208,12 @@ text-align: center;
 == footer
 ------------------*/
 footer {
-  border-radius: 10px 10px 10px 10px;
-  border: 1px solid black;
+  
+  
+margin-top: 5px;
   text-align: center;
+  background-color: darkgray;
+  color: white;
 
  }
 
